# arduino-sequencer

./: Cargo.toml  avr-atmega328p.json
main/: main.ino
src/: main.rs
